; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/imcsmb/extr_imcsmb.c_imcsmb_writeb.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/imcsmb/extr_imcsmb.c_imcsmb_writeb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i8, i8)* @imcsmb_writeb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @imcsmb_writeb(i32 %0, i32 %1, i8 signext %2, i8 signext %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8, align 1
  %8 = alloca i8, align 1
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i8 %2, i8* %7, align 1
  store i8 %3, i8* %8, align 1
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* %6, align 4
  %11 = load i8, i8* %7, align 1
  %12 = load i32, i32* @FALSE, align 4
  %13 = load i32, i32* @TRUE, align 4
  %14 = call i32 @imcsmb_transfer(i32 %9, i32 %10, i8 signext %11, i8* %8, i32 %12, i32 %13)
  ret i32 %14
}

declare dso_local i32 @imcsmb_transfer(i32, i32, i8 signext, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
